--- a/blog/stylesheet.css
+++ b/blog/stylesheet.css
@@ -6,6 +6,60 @@ body {
 
 }
 
+.menu{
+<nav>
+	<ul>
+		<li><a href="#">Home</a></li>
+		<li><a href="#">Cultural Blogs</a>
+			<ul>
+				<li><a href = https://dchen101.github.io/blog/c1-chefs-kitchen.html>Chefs Kitchen</a></li>
+				<li><a href = https://dchen101.github.io/blog/c3_thinking-style.html>Thinking Style</a></li>
+				<li><a href = https://dchen101.github.io/blog/c4-tech-issues.html>Tech Issues</a></li>
+				<li><a href = https://dchen101.github.io/blog/c5-feedback.html>Feedback</a></li>
+				<li><a href = https://dchen101.github.io/blog/c6-stereotype-threat.html>Stereotype Threat</a></li>
+				<li><a href = https://dchen101.github.io/blog/c7-values.html>Values</a></li>
+				<li><a href = https://dchen101.github.io/blog/c8-conflict.html>Conflict</a></li>
+				
+			<ul>
+		
+					</ul>
+				</li>
+			</ul>
+		</li>
+<li><a href="#">Technical Blogs</a>
+			<ul>
+				
+				<li><a href = https://dchen101.github.io/blog/t1-git-blog.html>Git Blog</a></li>
+				<li><a href = https://dchen101.github.io/blog/t2-css-design.html>CSS Design</a></li>
+				<li><a href = https://dchen101.github.io/blog/t3-arrays-hashes.html>Arrays and Hashes</a></li>
+				<li><a href = https://dchen101.github.io/blog/t4-enumerable-methods.html>Enumerable Methods</a></li>
+				<li><a href = https://dchen101.github.io/blog/t5-ruby-classes.html>Ruby Classes</a></li>
+				<li><a href = https://dchen101.github.io/blog/t6-oop-concepts.html>OOP Concepts</a></li>
+				<li><a href = https://dchen101.github.io/blog/t7-JavaScript.html>JavaScript</a></li>
+				<li><a href = https://dchen101.github.io/blog/t8-tech.html>Tech</a></li>
+			<ul>
+		
+
+
+	
+		
+					</ul>
+				</li>
+			</ul>
+		</li>
+
+		<li><a href="#">Projects</a>
+			<ul>
+				<li><a href="#">UX</a></li>
+			</ul>
+		</li>
+		<li><a href="#">About Me</a></li>
+	</ul>
+</nav>
+
+	
+}
+
 .indented
    {
    padding-left: 50pt;
