--- a/blog/stylesheet.css
+++ b/blog/stylesheet.css
@@ -19,9 +19,18 @@ body {
 	border-radius:3px;
 	opacity: 0.8;
 	margin: 5px 30px 30px 30px;
+  	text-align: left;
 
-  text-align: left;
+}
 
+.title{
+	font-size: 20px;
+	background-color: white;
+	box-shadow: 1px 1px 10px #888888;
+	border-radius:3px;
+	opacity: 0.8;
+	margin: 5px 10px 10px 10px;
+  	text-align: left;
 }
 
 .line{
